<?xml version="1.0" encoding="UTF-8"?>

<!--
  ~ Copyright 2013-2017 Simba Open Source
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>org.simbasecurity</groupId>
    <artifactId>simba</artifactId>
    <version>3.2.30-SNAPSHOT</version>
    <packaging>pom</packaging>
    <url>http://www.simbasecurity.org</url>

    <scm>
        <connection>scm:git:git@github.com:cegeka/simba-os.git</connection>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <!-- standard properties -->
        <project.scm.id>github.server</project.scm.id>

        <!-- version settings -->
        <org.springframework.version>4.3.6.RELEASE</org.springframework.version>
        <org.hibernate.version>5.2.6.Final</org.hibernate.version>
        <junit.version>4.12</junit.version>
        <mockito.version>2.7.11</mockito.version>
        <thrift.version>0.11.0</thrift.version>
    </properties>

    <name>Simba</name>
    <description>Parent pom for the Simba Project</description>
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <inceptionYear>2011</inceptionYear>
    <organization>
        <name>Cegeka</name>
        <url>http://www.cegeka.be</url>
    </organization>

    <modules>
        <module>simba-api</module>
        <module>simba-client</module>
        <module>simba-core</module>
        <module>simba-ri</module>
        <module>simba-manager</module>
		<module>simba-zoo</module>        
        <!--<module>simba-webdriver-test</module>-->
	</modules>

    <distributionManagement>
        <snapshotRepository>
            <id>simba-snapshots</id>
            <url>http://nexus.cegeka.be/nexus/content/repositories/simba-snapshots</url>
        </snapshotRepository>
        <repository>
            <id>simba-releases</id>
            <url>http://nexus.cegeka.be/nexus/content/repositories/simba-releases</url>
        </repository>
    </distributionManagement>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.6.2</version>
            <scope>test</scope>
        </dependency>
   </dependencies>

	<build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-report-plugin</artifactId>
                    <version>2.19.1</version>
                </plugin>
            </plugins>
        </pluginManagement>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<!--<plugin>-->
				<!--<groupId>org.apache.maven.plugins</groupId>-->
				<!--<artifactId>maven-surefire-plugin</artifactId>-->
				<!--<version>2.19.1</version>-->
				<!--<configuration>-->
					<!--<excludes>-->
						<!--<exclude>**/webdriver/**</exclude>-->
					<!--</excludes>-->
				<!--</configuration>-->
			<!--</plugin>-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>2.19.1</version>
            </plugin>
			<plugin>
			  <groupId>org.codehaus.mojo</groupId>
			  <artifactId>versions-maven-plugin</artifactId>
			  <version>2.1</version>
			</plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.3</version>
                <configuration>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.0.2</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
		</plugins>
	</build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>2.19.1</version>
            </plugin>
        </plugins>
    </reporting>

    <repositories>
        <repository>
            <id>nexus</id>
            <url>http://nexus.cegeka.be/nexus/content/groups/public</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>nexus</id>
            <url>http://nexus.cegeka.be/nexus/content/groups/public</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>


    <profiles>
		<!-- THRIFT -->
        <profile>
            <id>windows</id>
            <activation>
                <os>
                    <family>Windows</family>
                </os>
            </activation>
            <properties>
                <thrift.executable>${project.parent.basedir}/thrift/thrift-${thrift.version}.exe</thrift.executable>
            </properties>
        </profile>
        <profile>
            <id>unix</id>
            <activation>
                <os>
                    <family>Unix</family>
                </os>
            </activation>
            <properties>
                <thrift.executable>${project.parent.basedir}/thrift/thrift-${thrift.version}.tar.gz</thrift.executable>
            </properties>
        </profile>
        <!-- Add os specific profiles to locate thrift compiler for your system -->
		<!-- WebDriver tests -->
		<profile>
			<id>webDriverTests</id>
			<activation>
				<property>
					<name>webDriverTests</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<executions>
							<execution>
								<id>surefire-it</id>
								<phase>integration-test</phase>
								<goals>
									<goal>test</goal>
								</goals>
								<configuration>
									<excludes>
										<exclude>none</exclude>
									</excludes>
									<includes>
										<include>**/*WebdriverTest.java</include>
									</includes>
									<!--<systemProperties>
										<property>
											<name>simba.web.url</name>
											<value>fillInHere</value>
										</property>
										<property>
											<name>simba.url</name>
											<value>fillInHere</value>
										</property>
									</systemProperties>-->
									<argLine>-Xms512m -Xmx1500m -XX:MaxPermSize=512m</argLine>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>		
    </profiles>
</project>
